@@ -706,14 +706,14 @@ class TestSocket < Test::Unit::TestCase
     s2.send("a" * 100, 0)
     ret, addr, rflags = s1.recvmsg(10, Socket::MSG_PEEK)
     assert_equal "a" * 10, ret
-    assert_equal Socket::MSG_TRUNC, rflags & Socket::MSG_TRUNC
+    assert_equal Socket::MSG_TRUNC, rflags & Socket::MSG_TRUNC if !rflags.nil?
     ret, addr, rflags = s1.recvmsg(10, 0)
     assert_equal "a" * 10, ret
-    assert_equal Socket::MSG_TRUNC, rflags & Socket::MSG_TRUNC
+    assert_equal Socket::MSG_TRUNC, rflags & Socket::MSG_TRUNC if !rflags.nil?
     s2.send("b" * 100, 0)
     ret, addr, rflags = s1.recvmsg(10, 0)
     assert_equal "b" * 10, ret
-    assert_equal Socket::MSG_TRUNC, rflags & Socket::MSG_TRUNC
+    assert_equal Socket::MSG_TRUNC, rflags & Socket::MSG_TRUNC if !rflags.nil?
   ensure
     s1.close
     s2.close
